--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
   cupertino_icons: ^1.0.6
   animated_theme_switcher: ^2.0.10
   bloc: ^8.1.4
@@ -37,9 +39,13 @@ dependencies:
   # flutter_otp_text_field: ^1.1.3+2
   # otp_text_field: ^1.1.3
   shimmer: ^3.0.0
-  carousel_slider: ^5.0.0
+  # carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
-  otp_pin_field: ^1.2.9+1
+  # otp_pin_field: ^1.2.9+1
+  pinput: ^5.0.0
+  animate_do: ^3.3.4
+  lottie: ^3.1.2
+  # assets_audio_player: ^3.1.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +68,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/lang/
+    - assets/songs/
+    - assets/jsons/
 
 fonts:
     - family: Inter
